care-australia-uat/force-app/main/default/objects/Stripe_Credit_Card_Authorize__e/Stripe_Credit_Card_Authorize__e.object-meta.xml
<CustomObject>
    <label>Stripe Credit Card Authorize</label>
    <pluralLabel>Stripe Credit Cards Authorize</pluralLabel>
</CustomObject>