care-australia-uat/force-app/main/default/objects/Stripe_Credit_Card_Authorize__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>