care-australia-uat/force-app/main/default/objects/Stripe_Credit_Card_Authorize__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <length>200</length>
    <type>Text</type>
</CustomField>