care-australia-uat/force-app/main/default/objects/Stripe_Credit_Card_Authorize__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>